--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "joey-mckenzie-io-angular-blog-samples",
+  "name": "joey-mckenzie-io-blog-samples",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -50,6 +50,7 @@
     "jest": "27.0.3",
     "jest-preset-angular": "9.0.7",
     "prettier": "^2.3.1",
+    "tailwindcss": "^2.2.16",
     "ts-jest": "27.0.3",
     "typescript": "~4.3.5"
   }
