--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,231 @@
 {
   "version": 1,
   "projects": {
+    "nx-monorepo-angular-app": {
+      "projectType": "application",
+      "root": "apps/nx-monorepo-angular-app",
+      "sourceRoot": "apps/nx-monorepo-angular-app/src",
+      "prefix": "joey-mckenzie-io-blog-samples",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "outputs": ["{options.outputPath}"],
+          "options": {
+            "outputPath": "dist/apps/nx-monorepo-angular-app",
+            "index": "apps/nx-monorepo-angular-app/src/index.html",
+            "main": "apps/nx-monorepo-angular-app/src/main.ts",
+            "polyfills": "apps/nx-monorepo-angular-app/src/polyfills.ts",
+            "tsConfig": "apps/nx-monorepo-angular-app/tsconfig.app.json",
+            "assets": [
+              "apps/nx-monorepo-angular-app/src/favicon.ico",
+              "apps/nx-monorepo-angular-app/src/assets"
+            ],
+            "styles": ["apps/nx-monorepo-angular-app/src/styles.css"],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "apps/nx-monorepo-angular-app/src/environments/environment.ts",
+                  "with": "apps/nx-monorepo-angular-app/src/environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "browserTarget": "nx-monorepo-angular-app:build:production"
+            },
+            "development": {
+              "browserTarget": "nx-monorepo-angular-app:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "nx-monorepo-angular-app:build"
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "apps/nx-monorepo-angular-app/src/**/*.ts",
+              "apps/nx-monorepo-angular-app/src/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/nx-monorepo-angular-app"],
+          "options": {
+            "jestConfig": "apps/nx-monorepo-angular-app/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      },
+      "tags": []
+    },
+    "nx-monorepo-nest-app": {
+      "root": "apps/nx-monorepo-nest-app",
+      "sourceRoot": "apps/nx-monorepo-nest-app/src",
+      "projectType": "application",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/node:build",
+          "outputs": ["{options.outputPath}"],
+          "options": {
+            "outputPath": "dist/apps/nx-monorepo-nest-app",
+            "main": "apps/nx-monorepo-nest-app/src/main.ts",
+            "tsConfig": "apps/nx-monorepo-nest-app/tsconfig.app.json",
+            "assets": ["apps/nx-monorepo-nest-app/src/assets"]
+          },
+          "configurations": {
+            "production": {
+              "optimization": true,
+              "extractLicenses": true,
+              "inspect": false,
+              "fileReplacements": [
+                {
+                  "replace": "apps/nx-monorepo-nest-app/src/environments/environment.ts",
+                  "with": "apps/nx-monorepo-nest-app/src/environments/environment.prod.ts"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@nrwl/node:execute",
+          "options": {
+            "buildTarget": "nx-monorepo-nest-app:build"
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "outputs": ["{options.outputFile}"],
+          "options": {
+            "lintFilePatterns": ["apps/nx-monorepo-nest-app/**/*.ts"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/nx-monorepo-nest-app"],
+          "options": {
+            "jestConfig": "apps/nx-monorepo-nest-app/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      },
+      "tags": []
+    },
+    "nx-monorepo-next-app": {
+      "root": "apps/nx-monorepo-next-app",
+      "sourceRoot": "apps/nx-monorepo-next-app",
+      "projectType": "application",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/next:build",
+          "outputs": ["{options.outputPath}"],
+          "defaultConfiguration": "production",
+          "options": {
+            "root": "apps/nx-monorepo-next-app",
+            "outputPath": "dist/apps/nx-monorepo-next-app"
+          },
+          "configurations": {
+            "production": {}
+          }
+        },
+        "serve": {
+          "builder": "@nrwl/next:server",
+          "options": {
+            "buildTarget": "nx-monorepo-next-app:build",
+            "dev": true,
+            "port": 5200
+          },
+          "configurations": {
+            "production": {
+              "buildTarget": "nx-monorepo-next-app:build:production",
+              "dev": false
+            }
+          }
+        },
+        "export": {
+          "builder": "@nrwl/next:export",
+          "options": {
+            "buildTarget": "nx-monorepo-next-app:build:production"
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/nx-monorepo-next-app"],
+          "options": {
+            "jestConfig": "apps/nx-monorepo-next-app/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "outputs": ["{options.outputFile}"],
+          "options": {
+            "lintFilePatterns": [
+              "apps/nx-monorepo-next-app/**/*.{ts,tsx,js,jsx}"
+            ]
+          }
+        }
+      },
+      "tags": []
+    },
+    "shared": {
+      "root": "libs/shared",
+      "sourceRoot": "libs/shared/src",
+      "projectType": "library",
+      "architect": {
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "outputs": ["{options.outputFile}"],
+          "options": {
+            "lintFilePatterns": ["libs/shared/**/*.ts"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/shared"],
+          "options": {
+            "jestConfig": "libs/shared/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      },
+      "tags": []
+    },
     "tailwind-dark-mode": {
       "projectType": "application",
       "root": "apps/tailwind-dark-mode",
@@ -91,7 +316,8 @@
             "passWithNoTests": true
           }
         }
-      }
+      },
+      "tags": []
     },
     "tailwind-dark-mode-e2e": {
       "root": "apps/tailwind-dark-mode-e2e",
@@ -118,39 +344,9 @@
             "lintFilePatterns": ["apps/tailwind-dark-mode-e2e/**/*.{js,ts}"]
           }
         }
-      }
-    }
-  },
-  "cli": {
-    "defaultCollection": "@nrwl/angular",
-    "packageManager": "npm"
-  },
-  "schematics": {
-    "@nrwl/angular": {
-      "application": {
-        "linter": "eslint"
       },
-      "library": {
-        "linter": "eslint"
-      },
-      "storybook-configuration": {
-        "linter": "eslint"
-      }
-    },
-    "@nrwl/angular:application": {
-      "style": "css",
-      "linter": "eslint",
-      "unitTestRunner": "jest",
-      "e2eTestRunner": "cypress"
-    },
-    "@nrwl/angular:library": {
-      "style": "css",
-      "linter": "eslint",
-      "unitTestRunner": "jest"
-    },
-    "@nrwl/angular:component": {
-      "style": "css"
+      "tags": [],
+      "implicitDependencies": ["tailwind-dark-mode"]
     }
-  },
-  "defaultProject": "tailwind-dark-mode"
+  }
 }
