--- a/package.json
+++ b/package.json
@@ -19,7 +19,17 @@
     "@angular/platform-browser": "^12.2.0",
     "@angular/platform-browser-dynamic": "^12.2.0",
     "@angular/router": "^12.2.0",
-    "@nrwl/angular": "12.9.0",
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/core": "^7.0.0",
+    "@nestjs/platform-express": "^7.0.0",
+    "@nrwl/angular": "13.0.1",
+    "@nrwl/next": "13.0.1",
+    "core-js": "^3.6.5",
+    "next": "11.1.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "reflect-metadata": "^0.1.13",
+    "regenerator-runtime": "0.13.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -32,26 +42,45 @@
     "@angular/cli": "~12.2.0",
     "@angular/compiler-cli": "^12.2.0",
     "@angular/language-service": "^12.2.0",
-    "@nrwl/cli": "12.9.0",
-    "@nrwl/cypress": "12.9.0",
-    "@nrwl/eslint-plugin-nx": "12.9.0",
-    "@nrwl/jest": "12.9.0",
-    "@nrwl/linter": "12.9.0",
-    "@nrwl/tao": "12.9.0",
-    "@nrwl/workspace": "12.9.0",
-    "@types/jest": "26.0.24",
+    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/testing": "^7.0.0",
+    "@nrwl/cli": "13.0.1",
+    "@nrwl/cypress": "13.0.1",
+    "@nrwl/eslint-plugin-nx": "13.0.1",
+    "@nrwl/jest": "13.0.1",
+    "@nrwl/linter": "13.0.1",
+    "@nrwl/nest": "13.0.1",
+    "@nrwl/next": "13.0.1",
+    "@nrwl/node": "13.0.1",
+    "@nrwl/react": "13.0.1",
+    "@nrwl/tao": "13.0.1",
+    "@nrwl/web": "13.0.1",
+    "@nrwl/workspace": "13.0.1",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/react-hooks": "7.0.2",
+    "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "~4.28.3",
-    "@typescript-eslint/parser": "~4.28.3",
+    "@types/react": "17.0.30",
+    "@types/react-dom": "17.0.9",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/parser": "4.33.0",
+    "autoprefixer": "^10.3.7",
+    "babel-jest": "27.2.3",
     "cypress": "^8.3.0",
-    "eslint": "7.22.0",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "jest": "27.0.3",
-    "jest-preset-angular": "9.0.7",
+    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.26.1",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "jest": "27.2.3",
+    "jest-preset-angular": "10.0.1",
+    "postcss": "^8.3.11",
     "prettier": "^2.3.1",
     "tailwindcss": "^2.2.16",
-    "ts-jest": "27.0.3",
+    "ts-jest": "27.0.5",
     "typescript": "~4.3.5"
   }
 }
